# polynames

./: README.md
backend-api/: .gitignore  Cargo.toml  config.default.toml  rustfmt.toml
backend-api/migrations/: 202407031725_create_words.sql  202407051320_types.sql  202407051323_create_users.sql  202407051328_create_games.sql  202407061134_create_rounds.sql  2024_07_03_17_25_create_words.sql  words.csv
backend-api/src/: config.rs  macros.rs  main.rs  utils.rs
backend-api/src/database/: connection.rs  migration.rs
backend-api/src/models/: mod.rs  word.rs
backend-api/src/models/internal/: migration.rs
backend-api/src/routes/: mod.rs  words.rs
backend-api/src/routes/websocket/: mod.rs
frontend/: vite.config.ts
frontend/src/: Compter.tsx  app.tsx  logo.tsx  main.tsx
